--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     rel="stylesheet"
   />
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
