--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
+  <script type="application/javascript">var global = window;</script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
